eyed3 (0.8.4-1) UNRELEASED; urgency=low

  * New upstream version
  * Drop patch fix-setup-py3-encoding (applied upstream)

  * Upload sponsored by Petter Reinholdtsen.

 -- Gaetano Guerriero <x.guerriero@tin.it>  Fri, 24 Nov 2017 18:54:17 +0100

eyed3 (0.8.3-2) unstable; urgency=medium

  * Fix FTBFS with python3 and not utf-8 system encoding (Closes: #881101)

  * Upload sponsored by Petter Reinholdtsen.

 -- Gaetano Guerriero <x.guerriero@tin.it>  Sun, 12 Nov 2017 18:49:11 +0100

eyed3 (0.8.3-1) unstable; urgency=low

  * New upstream version
  * Build also the library package for python3
  * Drop patch fix-manpage-typo (fixed upstream)
  * Add patch support-debian-python-magic to use debian version of
    magic module
  * Add autopkgtest configuration
  * Update Standards-Version to 4.1.1, no changes needed.

  * Upload sponsored by Petter Reinholdtsen.

 -- Gaetano Guerriero <x.guerriero@tin.it>  Tue, 31 Oct 2017 20:31:25 +0100

eyed3 (0.8-1) unstable; urgency=low

  * New upstream version
  * Add d/upstream/metadata with CPE record of project (Closes: #848282)
  * Remove "display" plugin, it depends on "grako", missing in Debian

  * Upload sponsored by Petter Reinholdtsen.

 -- Gaetano Guerriero <x.guerriero@tin.it>  Sat, 15 Jul 2017 11:55:28 +0200

eyed3 (0.7.10-1) unstable; urgency=low

  * New upstream version
  * Fix homepage url in debian/copyright (Closes: #844260)
  * Fix wrong spelled option in manpage (Closes: #846586)
    Thanks to Edward Betts for the fix.

  * Upload sponsored by Petter Reinholdtsen.

 -- Gaetano Guerriero <x.guerriero@tin.it>  Thu, 15 Dec 2016 21:38:40 +0100

eyed3 (0.7.9-2) unstable; urgency=low

  * Ensure info.py.in is never regenerated, to prevent build reproducibility
    issues
  * Exclude info.py.in from binary distribution, it is useless
  * Fix Vcs-* control fields with debian packaging repository

  * Upload sponsored by Petter Reinholdtsen.

 -- Gaetano Guerriero <x.guerriero@tin.it>  Sun, 06 Nov 2016 18:59:07 +0000
